# spectral-index

./: .gitignore  LICENSE  README.md  pyproject.toml
results/: gemma-2-27b-it.json  gemma-2-2b-it.json  gemma-2-9b-it.json  llama-3.1-70b.json  llama-3.1-8b.json  mistral-7b-instruct-v0.3.json  mistral-7b-v0.3.json  mistral-nemo-12b.json  mistral-small-24b.json  qwen2.5-1.5b-instruct.json  qwen2.5-14b-instruct.json  qwen2.5-32b-instruct.json  qwen2.5-72b-instruct.json  qwen2.5-7b-instruct.json  qwen2.5-coder-7b.json  stability_llama-3.1-8b.json  stability_mistral-7b-v0.3.json  stability_qwen2.5-7b-instruct.json
scripts/: build_leaderboard.py  modal_full_sweep.py  modal_measure_all.py  modal_run.py  run_all.py
site/: index.html
src/: measure.py
