[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spectral-index"
version = "0.1.0"
description = "Measure effective KV-cache dimensionality (d_eff) across open-source LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ashwin Gopinath" }]
requires-python = ">=3.10"

dependencies = [
    # Deep-learning stack
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
    # Calibration data
    "datasets>=2.18.0",
    # Numerics
    "numpy>=1.26.0",
]

[project.optional-dependencies]
modal = [
    "modal>=0.62.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
# Convenience entry-point (alternatively: python -m src.measure)
spectral-measure = "src.measure:main"

[tool.setuptools.packages.find]
where = ["."]

# ---------------------------------------------------------------------------
# Ruff (linting / formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
